--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,10 +6,12 @@
   <ul>
     {% if g.user %}
       <li><span>{{ g.user["firstname"] }}</span></li>
-      <li><a href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a>
+      <li><a class="action" href="{{ url_for('auth.profile') }}">Oma tili</a></li>
+      <li><a class="action" href="{{ url_for('admin.shop') }}">Oma kauppa</a></li>
+      <li><a href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a></li>
     {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Rekisteröidy</a>
-      <li><a href="{{ url_for('auth.login') }}">Kirjaudu sisään</a>
+      <li><a href="{{ url_for('auth.register') }}">Rekisteröidy</a></li>
+      <li><a href="{{ url_for('auth.login') }}">Kirjaudu sisään</a></li>
     {% endif %}
   </ul>
 </nav>
