--- a/app/templates/ostoskeskus/index.html
+++ b/app/templates/ostoskeskus/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Kaupat{% endblock %}</h1>
+  <h1>{% block title %}Tervetuloa Ostoskeskukseen!{% endblock %}</h1>
   {% if g.user %}
-    <a class="action" href="">Hallinnoi kauppaasi</a>
+    
   {% endif %}
 {% endblock %}
 
@@ -13,7 +13,7 @@
       <header>
         <div>
           <h1>{{ shop['name'] }}</h1>
-          <div class="about">{{ shop['description'] }}</div>
+          <div class="desciption">{{ shop['description'] }}</div>
         </div>
       </header>
     </article>
