Four blueprints (auth, admin, cart and ostoskeskus) in place, many blank pages but can now navigate across

--- a/app/templates/admin/shop.html
+++ b/app/templates/admin/shop.html
@@ -1,8 +1,4 @@
-{% extends 'base.html' %}
-
-{% block header %}
-  <h1>{% block title %}Hallinnoi kauppaasi{% endblock %}</h1>
-{% endblock %}
+{% extends 'admin/base.html' %}
 
 {% block content %}
   <form method="post">
