The first take on styling (will need refactoring, though)

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -3,9 +3,11 @@
 {% block header %}
   <h1>{% block title %} Hallinnoi kauppaasi {% endblock %}</h1>
 
-  <div class="tab"><a href="{{ url_for('admin.shop') }}">Kaupan tiedot</a></div>
-  <div class="tab"><a href="{{ url_for('admin.products') }}">Tuotteet</a></div>
-  <div class="tab"><a href="{{ url_for('admin.sales') }}">Myynti</a></div>
+  <div class="tab">
+    <a href="{{ url_for('admin.shop') }}">Kaupan tiedot</a>
+    <a href="{{ url_for('admin.products') }}">Tuotteet</a>
+    <a href="{{ url_for('admin.sales') }}">Myynti</a>
+  </div>
 
   {% endblock %}
 
