--- a/app/static/ostoskeskus.css
+++ b/app/static/ostoskeskus.css
@@ -1,1 +1,150 @@
-
+html {
+    font-family: sans-serif;
+    background: #ffffff;
+    padding: 1rem;
+}
+body {
+    max-width: 960px;
+    margin: 0 auto;
+    background: white;
+}
+h1 {
+    color: #8696bf;
+    margin: 1rem 0;
+}
+a {
+    color: #ffffff;
+}
+hr {
+    border: none;
+    border-top: 1px solid #cccccc;
+}
+nav {
+    background: #453cc7;
+    display: flex;
+    align-items: center;
+    padding: 0 0.5rem;
+    border-radius: 10px;
+}
+nav h1 {
+    flex: auto;
+    margin: 0;
+}
+nav h1 a {
+    text-decoration: none;
+    padding: 0.75rem 0.75rem;
+}
+nav ul  {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+nav ul li a, nav ul li span, header .action {
+    display: block;
+    padding: 0.75rem;
+}
+header > h1 {
+    margin-left: 20px;
+}
+.flash {
+    margin: 1em 0;
+    padding: 1em;
+    background: #cae6f6;
+    border: 1px solid #377ba8;
+}
+input.danger {
+    color: #cc2f2e;
+}
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.column {
+    flex: 1 1 20%;
+    margin: 10px;
+    padding: 10px 10px 10px 10px;
+    background-color: #453cc7;
+    box-sizing: border-box;
+    border-radius: 10px; 
+    /* Need to think if I want to enable drop shadows across the app
+    overflow: hidden;
+    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.5);
+    */
+}
+.category {
+    color: #ffffff;
+    text-align: center;
+    font-size: 1.5rem;
+    min-height: 4rem;
+}
+.name {
+    color: #ffffff;
+    text-align: center;
+    font-size: 1rem;
+}
+.description {
+    color: #ffffff;
+    text-align: center;
+    font-size: 0.75rem;
+    font-style: italic;
+}
+.auth-form, .admin-form {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 0px;
+}
+.auth-form label, .admin-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+.auth-form input, .admin-form input {
+    width: 480px;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.auth-form input[type="submit"], .admin-form input[type="submit"] {
+    width: 500px;
+    background-color: #453cc7;
+    color: #ffffff;
+    cursor: pointer;
+    margin-bottom: 0px;
+    border-radius: 5px;
+}
+.search-form {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 0px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.search-form input {
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+}
+.search-form input[type="submit"] {
+    width: 100px;
+    background-color: #453cc7;
+    color: #ffffff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.tab {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.tab > a {
+    color: #000000;
+}
