--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'auth/base.html' %}
 
 {% block header %}
   <h1>{% block title %}Kirjaudu sisään{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
+  <form method="post" class="auth-form">
     <label for="email">Sähköpostiosoite</label>
     <input name="email" id="email" required>
     <label for="password">Salasana</label>
