--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,7 @@
   <h1><a href="/">Ostoskeskus</a></h1>
   <ul>
     {% if g.user %}
-      <li><span>{{ g.user["firstname"] }}</span></li>
-      <li><a class="action" href="{{ url_for('auth.profile') }}">Oma tili</a></li>
+      <li><a class="action" href="{{ url_for('auth.profile') }}">{{ g.user["firstname"] }}</a></li>
       <li><a class="action" href="{{ url_for('admin.shop') }}">Oma kauppa</a></li>
       <li><a class="action" href="{{ url_for('cart.view') }}">Ostoskori</a></li>
       <li><a href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a></li>
