--- a/app/templates/ostoskeskus/index.html
+++ b/app/templates/ostoskeskus/index.html
@@ -1,40 +1,75 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Tervetuloa!{% endblock %}</h1>
+  <h1>{% block title %}Tervetuloa ostoksille!{% endblock %}</h1>
   {% if g.user %}
   {% endif %}
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="column">
-    <h2>Uusimmat kaupat</h2>
-    {% for shop in shops %}
-      <article class="shop">
-          <div>
-            <h1>{{ shop['name'] }}</h1>
-            <div class="description">{{ shop['description'] }}</div>
-          </div>
-      </article>
-      {% if not loop.last %}
-        <hr>
-      {% endif %}
-    {% endfor %}
-  </div>
-  <div class="column">
-    <h2>Viimeisimmät tuotteet</h2>
-    {% for product in products %}
-      <article class="product">
-          <div>
-            <h1>{{ shop['name'] }}</h1>
-            <div class="description">{{ product['description'] }}</div>
-          </div>
-      </article>
-      {% if not loop.last %}
-        <hr>
-      {% endif %}
-    {% endfor %}  
+<div class="lists">
+  <div class="row">
+    <div class="column">
+      <div class="category">Uusimmat kaupat</div>
+      {% for shop in newest_shops %}
+        <article class="shop">
+            <div>
+              <div class="name">{{ shop['name'] }}</div>  
+              <div class="description">{{ shop['description'] }}</div>
+            </div>
+        </article>
+        {% if not loop.last %}
+          <hr>
+        {% endif %}
+      {% endfor %}
+    </div>
+    <div class="column">
+      <div class="category">Uusimmat tuotteet</div>
+      {% for product in newest_products %}
+        <article class="shop">
+            <div>
+              <div class="name">{{ product['name'] }}</div>  
+              <div class="description">{{ product['description'] }}</div>
+            </div>
+        </article>
+        {% if not loop.last %}
+          <hr>
+        {% endif %}
+      {% endfor %}
+    </div>
+    <div class="column">
+      <div class="category">Suosituimmat kaupat</div>
+      {% for shop in popular_shops %}
+        <article class="shop">
+            <div>
+              <div class="name">{{ shop['name'] }}</div>  
+              <div class="description">{{ shop['description'] }}</div>
+            </div>
+        </article>
+        {% if not loop.last %}
+          <hr>
+        {% endif %}
+      {% endfor %}
+    </div>
+    <div class="column">
+      <div class="category">Ostetuimmat tuotteet</div>
+      {% for product in popular_products %}
+        <article class="shop">
+            <div>
+              <div class="name">{{ shop['name'] }}</div>  
+              <div class="description">{{ shop['description'] }}</div>
+            </div>
+        </article>
+        {% if not loop.last %}
+          <hr>
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 </div>
+<form action="{{ url_for('ostoskeskus.search') }}" method="post" class="search-form">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+  <input type="text" name="search" id="search" placeholder="Etsi tuotteita...">
+  <input type="submit" value="Etsi">
+</form>
 {% endblock %}
