--- a/app/static/ostoskeskus.css
+++ b/app/static/ostoskeskus.css
@@ -16,6 +16,7 @@ a {
     color: #ffffff;
 }
 hr {
+    width: 50%;
     border: none;
     border-top: 1px solid #cccccc;
 }
@@ -53,9 +54,6 @@ header > h1 {
     background: #cae6f6;
     border: 1px solid #377ba8;
 }
-input.danger {
-    color: #cc2f2e;
-}
 .row {
     display: flex;
     flex-direction: row;
@@ -80,6 +78,7 @@ input.danger {
     color: #ffffff;
     text-align: center;
     font-size: 1.5rem;
+    font-weight: bold;
     min-height: 4rem;
 }
 .top-picks {
@@ -87,7 +86,9 @@ input.danger {
     text-align: center;
 }
 .name {
+    font-weight: bold;
     font-size: 1rem;
+    margin-bottom: 10px;
 }
 .description {
     font-size: 0.75rem;
@@ -176,7 +177,7 @@ input.danger {
     margin: 0 auto;
 }
 .listing {
-    border: 1px solid #cccccc;
+    border-radius: 10px;
     padding: 10px;
     box-sizing: border-box;
     color: #ffffff;
@@ -185,6 +186,7 @@ input.danger {
     text-align: center;
 }
 .image img {
+    border-radius: 10px;
     width: 100%;
     height: auto;
 }
