--- a/app/templates/ostoskeskus/products.html
+++ b/app/templates/ostoskeskus/products.html
@@ -8,10 +8,17 @@
         <div class="image"><img src="{{ product['image'] }}"></div>
         <div class="name">{{ product['name'] }}</div>
         <div class="description">{{ product['description'] }}</div>
+
+        {# TODO: Use localization here #}
         <div class="price">{{ product['price'] }} &#8364; (sis. ALV)</div>
+        
         <div class="quantity">Saatavilla: {{ product['quantity'] }} kpl</div>
-        <div class="seller">Myyjä: {{ product['shop_id'] }}</div>
-        <div class="buy"><a href="{{ url_for('cart.add', product_id=product['product_id']) }}">Osta</a></div>
+        <div class="seller">Myyjä: {{ product['shop_name'] }}</div>
+        {% if g.user %}
+            <div class="buy"><a href="{{ url_for('cart.add', product_id=product['product_id']) }}">Osta</a></div>
+        {% else %}
+            <div class="buy"><a href="{{ url_for('auth.login') }}">Kirjaudu</a></div>
+        {% endif %}
     </div>
 {% endfor %}
 </div>
