--- a/app/templates/ostoskeskus/products.html
+++ b/app/templates/ostoskeskus/products.html
@@ -26,5 +26,10 @@
     </div>
 {% endfor %}
 </div>
+<form action="{{ url_for('ostoskeskus.products') }}" method="get" class="search-form">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <input type="text" name="search" id="search" placeholder="Etsi tuotteita..." required>
+    <input type="submit" value="Etsi">
+  </form>
 
 {% endblock %}
