--- a/app/templates/admin/products.html
+++ b/app/templates/admin/products.html
@@ -2,6 +2,37 @@
 
 {% block content %}
 
-Coming soon: admin/products.html
+<div class="grid">
+    {% for product in products %}
+        <div class="listing">
+            <div class="image"><img src="{{ product['image'] }}"></div>
+            <div class="name">{{ product['name'] }}</div>
+            <div class="description">{{ product['description'] }}</div>
+    
+            {# TODO: Use localization here #}
+            <div class="price">{{ product['price'] }} &#8364; (sis. ALV)</div>
+            
+            <div class="quantity">Saatavilla: {{ product['quantity'] }} kpl</div>
+            <div class="seller">Myyjä: {{ product['shop_name'] }}</div>
+            <div class="remove"><a href="{{ url_for('admin.edit', product_id=product['product_id']) }}">Muuta</a></div>
+        </div>
+    {% endfor %}
+    </div>
+    
+    <div class="list_footer">
+        {% if current_page > 1 %}
+            <a href="{{ url_for('ostoskeskus.products', page=current_page-1) }}">Edellinen sivu</a>
+        {% endif %}
+        {% for page_number in range(1, total_pages + 1) %}
+            {% if page_number == current_page %}
+                <b>{{ page_number }}</b>
+            {% else %}
+                <a href="{{ url_for('ostoskeskus.products', page=page_number) }}">{{ page_number }}</a>
+            {% endif %}
+        {% endfor %}
+        {% if current_page < total_pages %}
+            <a href="{{ url_for('ostoskeskus.products', page=current_page+1) }}">Seuraava sivu</a>
+        {% endif %}
+    </div>    
 
 {% endblock %}
