View for browsing shops

--- a/app/templates/ostoskeskus/index.html
+++ b/app/templates/ostoskeskus/index.html
@@ -66,6 +66,11 @@
   </div>
 </div>
 
+<div class="list_footer">
+  <a href="{{ url_for('ostoskeskus.products') }}">Selaa tuotteita</a>
+  <a href="{{ url_for('ostoskeskus.shops') }}">Selaa kauppoja</a>
+</div>
+
 <form action="{{ url_for('ostoskeskus.products') }}" method="get" class="search-form">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
   <input type="text" name="search" id="search" placeholder="Etsi tuotteita..." required>
