--- a/app/templates/cart/view.html
+++ b/app/templates/cart/view.html
@@ -20,10 +20,7 @@
 
                     <div class="name">{{ product['name'] }}</div>
                     <div class="description">{{ product['description'] }}</div>
-            
-                    {# TODO: Use localization here #}
-                    <div class="price">{{ product['price'] }} &#8364; (sis. ALV)</div>
-
+                    <div class="price">{{ '%.2f' % product['price'] }} &#8364; (sis. ALV)</div>
                     <div class="seller">Myyjä: {{ product['shop_name'] }}</div>
                     {% if g.user %}
                         {% set product_key = "_" ~ product['product_id'] %}
