--- a/app/templates/ostoskeskus/index.html
+++ b/app/templates/ostoskeskus/index.html
@@ -15,7 +15,7 @@
       <div class="category">Uusimmat kaupat</div>
       {% for shop in newest_shops %}
         <article class="top-picks">
-          <div class="name"><a href="{{ url_for('ostoskeskus.products', shop=shop['shop_id']) }}">{{ shop['name'] }}</a></div>  
+          <div class="name"><a href="{{ url_for('ostoskeskus.products', shop_id=shop['shop_id']) }}">{{ shop['name'] }}</a></div>  
           <div class="description">{{ shop['description'] }}</div>
         </article>
         {% if not loop.last %}
@@ -28,7 +28,7 @@
       <div class="category">Uusimmat tuotteet</div>
       {% for product in newest_products %}
         <article class="top-picks">
-          <div class="name">{{ product['name'] }}</div>
+          <div class="name"><a href="{{ url_for('ostoskeskus.product', product_id=product['product_id']) }}">{{ product['name'] }}</a></div>
           <div class="description">{{ product['description'] }}</div>
         </article>
         {% if not loop.last %}
@@ -41,7 +41,7 @@
       <div class="category">Suosituimmat kaupat</div>
       {% for shop in popular_shops %}
         <article class="top-picks">
-          <div class="name">{{ shop['name'] }}</div>  
+          <div class="name"><a href="{{ url_for('ostoskeskus.products', shop_id=shop['shop_id']) }}">{{ shop['name'] }}</a></div>  
           <div class="description">{{ shop['description'] }}</div>
         </article>
         {% if not loop.last %}
@@ -54,7 +54,7 @@
       <div class="category">Ostetuimmat tuotteet</div>
       {% for product in popular_products %}
         <article class="top-picks">
-          <div class="name">{{ product['name'] }}</div>  
+          <div class="name"><a href="{{ url_for('ostoskeskus.product', product_id=product['product_id']) }}">{{ product['name'] }}</a></div>  
           <div class="description">{{ product['description'] }}</div>
         </article>
         {% if not loop.last %}
