--- a/app/templates/cart/view.html
+++ b/app/templates/cart/view.html
@@ -12,8 +12,8 @@
             {% for product in products %}
                 <div class="listing">
 
-                    {% if product['image'] %}
-                        <div class="image"><img src="{{ product['image'] }}"></div>
+                    {% if product['image_src'] %}
+                        <div class="image"><img src="{{ product['image_src'] }}"></div>
                     {% else %}
                         <div class="image"><img src="https://placehold.co/200x200?text=Kuva+puuttuu"></div>
                     {% endif %}
