--- a/app/templates/ostoskeskus/index.html
+++ b/app/templates/ostoskeskus/index.html
@@ -16,7 +16,7 @@
       {% for shop in newest_shops %}
         <article class="top-picks">
           <div class="name"><a href="{{ url_for('ostoskeskus.products', shop_id=shop['shop_id']) }}">{{ shop['name'] }}</a></div>  
-          <div class="description">{{ shop['description'] }}</div>
+          <div class="description">{{ shop['description'] | truncate(80) }}</div>
         </article>
         {% if not loop.last %}
           <hr>
@@ -29,7 +29,7 @@
       {% for product in newest_products %}
         <article class="top-picks">
           <div class="name"><a href="{{ url_for('ostoskeskus.product', product_id=product['product_id']) }}">{{ product['name'] }}</a></div>
-          <div class="description">{{ product['description'] }}</div>
+          <div class="description">{{ product['description'] | truncate(80) }}</div>
         </article>
         {% if not loop.last %}
           <hr>
@@ -42,7 +42,7 @@
       {% for shop in popular_shops %}
         <article class="top-picks">
           <div class="name"><a href="{{ url_for('ostoskeskus.products', shop_id=shop['shop_id']) }}">{{ shop['name'] }}</a></div>  
-          <div class="description">{{ shop['description'] }}</div>
+          <div class="description">{{ shop['description'] | truncate(80) }}</div>
         </article>
         {% if not loop.last %}
           <hr>
@@ -55,7 +55,7 @@
       {% for product in popular_products %}
         <article class="top-picks">
           <div class="name"><a href="{{ url_for('ostoskeskus.product', product_id=product['product_id']) }}">{{ product['name'] }}</a></div>  
-          <div class="description">{{ product['description'] }}</div>
+          <div class="description">{{ product['description'] | truncate(80) }}</div>
         </article>
         {% if not loop.last %}
           <hr>
