--- a/app/templates/ostoskeskus/index.html
+++ b/app/templates/ostoskeskus/index.html
@@ -71,7 +71,7 @@
   <a href="{{ url_for('ostoskeskus.shops') }}">Selaa kauppoja</a>
 </div>
 
-<form action="{{ url_for('ostoskeskus.products') }}" method="get" class="search-form">
+<form action="{{ url_for('ostoskeskus.products') }}" method="post" class="search-form">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
   <input type="text" name="search" id="search" placeholder="Etsi tuotteita..." required>
   <input type="submit" value="Etsi">
