--- a/app/templates/ostoskeskus/products.html
+++ b/app/templates/ostoskeskus/products.html
@@ -5,13 +5,11 @@
 <div class="grid">
 {% for product in products %}
     <div class="listing">
-
         {% if product['image_src'] %}
             <div class="image"><img src="{{ product['image_src'] }}"></div>
         {% else %}
             <div class="image"><img src="https://placehold.co/200x200?text=Kuva+puuttuu"></div>
         {% endif %}
-
         <div class="name">{{ product['name'] }}</div>
         <div class="description">{{ product['description'] }}</div>
         <div class="price">{{ '%.2f' % product['price'] }} &#8364; (sis. ALV)</div>
@@ -46,7 +44,7 @@
     {% endif %}
 </div>
 
-<form action="{{ url_for('ostoskeskus.products') }}" method="get" class="search-form">
+<form action="{{ url_for('ostoskeskus.products') }}" method="post" class="search-form">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <input type="text" name="search" id="search" placeholder="Etsi tuotteita..." required>
     <input type="submit" value="Etsi">
