--- a/app/templates/admin/shop.html
+++ b/app/templates/admin/shop.html
@@ -4,7 +4,7 @@
 
   <form method="post" class="admin-form">
     <label for="name">Nimi</label>
-    <input name="name" id="name" required value="{{ shop['name'] }}">
+    <input name="name" id="name" required value="{{ shop['name'] }}" placeholder="15-50 merkkiä">
     <label for="desciption">Kuvaus</label>
     <input name="description" id="description" required value="{{ shop['description'] }}">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
