--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,22 +2,36 @@
 <title>{% block title %}{% endblock %} - Ostoskeskus</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='ostoskeskus.css') }}">
 <nav>
-  <h1><a href="/">Ostoskeskus</a></h1>
+  <h1>
+    <a href="/">Ostoskeskus</a>
+  </h1>
   <ul>
-    {% if g.user %}
-      <li><a class="action" href="{{ url_for('auth.profile') }}">{{ g.user["firstname"] }}</a></li>
-      <li><a class="action" href="{{ url_for('admin.shop') }}">Oma kauppa</a></li>
-      <li><a class="action" href="{{ url_for('cart.view') }}">Ostoskori</a></li>
-      <li><a href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a></li>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Rekisteröidy</a></li>
-      <li><a href="{{ url_for('auth.login') }}">Kirjaudu sisään</a></li>
+  {% if g.user %}
+    <li>
+      <a class="action" href="{{ url_for('auth.profile') }}">{{ g.user["firstname"] }}</a>
+    </li>
+    <li>
+      <a class="action" href="{{ url_for('admin.shop') }}">Oma kauppa</a>
+    </li>
+    <li>
+      <a class="action" href="{{ url_for('cart.view') }}">Ostoskori</a>
+    </li>
+    <li>
+      <a href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a>
+    </li>
+  {% else %}
+    <li>
+      <a href="{{ url_for('auth.register') }}">Rekisteröidy</a>
+    </li>
+    <li>
+      <a href="{{ url_for('auth.login') }}">Kirjaudu sisään</a>
+    </li>
     {% endif %}
   </ul>
 </nav>
 <section class="content">
   <header>
-    {% block header %}{% endblock %}
+  {% block header %}{% endblock %}
   </header>
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
