Last-minute validation fixes.

--- a/app/templates/admin/edit.html
+++ b/app/templates/admin/edit.html
@@ -7,7 +7,7 @@
     <label for="name">Nimi</label>
     <input name="name" id="name" required value="{{ product['name'] }}" placeholder="5-50 merkkiä">
     <label for="desciption">Kuvaus</label>
-    <input name="description" id="description" required value="{{ product['description'] }}" placeholder="Vähintään 25 merkkiä">
+    <input name="description" id="description" required value="{{ product['description'] }}" placeholder="25-500 merkkiä">
     <label for="image">Kuva</label>
     <input type="file" name="image" id="image">JPG tai PNG, muutetaan kokoon 200x200 pikseliä
     <div>
