--- a/app/templates/admin/shop.html
+++ b/app/templates/admin/shop.html
@@ -6,7 +6,7 @@
     <label for="name">Nimi</label>
     <input name="name" id="name" required value="{{ shop['name'] }}" placeholder="15-50 merkkiä">
     <label for="desciption">Kuvaus</label>
-    <input name="description" id="description" required value="{{ shop['description'] }}">
+    <input name="description" id="description" required value="{{ shop['description'] }}" placeholder="25-250 merkkiä">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <input type="submit" value="Muuta tietoja">
   </form>
